syntax = "proto3";

package com.sitewhere.grpc.model;

option java_outer_classname = "AssetModel";

import "sitewhere-common.proto";
import "google/protobuf/timestamp.proto";

// ###################
// ### ASSET TYPES ###
// ###################

// Asset type create request.
message GAssetTypeCreateRequest {
	GOptionalString token = 1;
	string name = 2;
	string description = 3;
	string imageUrl = 4;
	GAssetCategory assetCategory = 5;
	map<string, string> metadata = 6;
	GBrandingInformation branding = 7;
}

// Asset type.
message GAssetType {
	string name = 1;
	string description = 2;
	string imageUrl = 3;
	GAssetCategory assetCategory = 4;
	GEntityInformation entityInformation = 5;
	GBrandingInformation branding = 6;
}

// Criteria for searching asset types.
message GAssetTypeSearchCriteria {
	GPaging paging = 2;
}

// Results for asset type search.
message GAssetTypeSearchResults {
	int64 count = 1;
	repeated GAssetType assetTypes = 2;
}

// ##############
// ### ASSETS ###
// ##############

// Asset create request.
message GAssetCreateRequest {
	GOptionalString token = 1;
	string assetTypeToken = 2;
	string name = 3;
	string imageUrl = 4;
	map<string, string> metadata = 5;
	GBrandingInformation branding = 6;
}

// Asset.
message GAsset {
	GUUID assetTypeId = 1;
	string name = 2;
	string imageUrl = 3;
	GEntityInformation entityInformation = 4;
	GBrandingInformation branding = 5;
}

// Criteria for searching assets.
message GAssetSearchCriteria {
	GPaging paging = 2;
	GUUID assetTypeId = 3;
}

// Results for asset search.
message GAssetSearchResults {
	int64 count = 1;
	repeated GAsset assets = 2;
}
